[tool.poetry]
name = "event-planning-crew"
version = "0.1.0"
description = ""
authors = ["ZTZ <tzamirov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
crewai = {extras = ["tools"], version = "^0.30.11"}
python-dotenv = "^1.0.1"
agentops = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
